k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webrtc-service
  namespace: webrtc-app
spec:
  type: LoadBalancer
  ports:
    - port: 4433
      targetPort: 4433
  selector:
    app: webrtc-server
